<resources>
    <string name="app_name">绿色守护浏览器</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="weiwei1">null</string>
    <string name="weiwei2">null</string>
    <string name="weiwei3">null</string>
    <string name="weiwei4">null</string>
    <string name="weiwei5">null</string>
    <string name="weiwei6">null</string>
    <string name="weiwei7">null</string>

    <string name="weiwei8">null</string>
    <string name="weiwei9">null</string>
    <string name="weiwei9_1">null</string>
    <string name="weiwei10">null</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">常规</string>

    <string name="pref_title_social_recommendations">不进行网页内容拦截</string>
    <string name="pref_description_social_recommendations">开启后将不提示“此网页是否为新闻网页”
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_account">邮箱/用户名</string>
    <string name="prompt_email">监护人邮箱</string>
    <string name="prompt_username">被监护人用户名</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_guardian_password">监护人密码</string>
    <string name="prompt_unguardian_password">被监护人密码</string>
    <string name="prompt_password_again">再次输入密码</string>
    <string name="prompt_identifying_code">验证码,请点击获取</string>
    <string name="action_sign_in">登  录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_register">注  册</string>
    <string name="action_register_short">注册</string>
    <string name="error_invalid_email">Email地址无效</string>
    <string name="error_exist_email">此Email已被注册</string>
    <string name="error_exist_username">此那么用户名已被注册</string>
    <string name="error_invalid_password">密码不少于6位</string>
    <string name="error_invalid_username">用户名不少于4位</string>
    <string name="error_insame_password">两次密码不同</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">不能为空</string>
    <string name="permission_rationale">"提供电子邮件完成所需的联系人权限"
    </string>
</resources>
