<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.dustray.simplebrowser.LoginActivity">


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:elevation="@dimen/action_bar_shadow"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingLeft="40dp"
                android:translationZ="@dimen/action_bar_shadow">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_account"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:shadowColor="@color/white"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHighlight="@color/white"
                        android:textColorLink="@color/white" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/white" />

                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_go_forget_pass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="#0000"
                        android:gravity="right"
                        android:text="忘记密码?"
                        android:textColor="@color/white"
                        android:textSize="15dp" />


                </LinearLayout>
            </LinearLayout>
            <!-- Login progress -->
            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="8dp"
                android:progressDrawable="@color/colorAccent"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_go_register"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/xml_btn_color_primary"

                    android:elevation="1dp"
                    android:text="注册"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:translationZ="1dp" />

                <Button
                    android:id="@+id/btn_email_sign_in"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/xml_btn_color_accent"

                    android:elevation="1dp"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:translationZ="1dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
